--- a/buddybeats/Gemfile
+++ b/buddybeats/Gemfile
@@ -31,6 +31,8 @@ gem 'bcrypt', '~> 3.1.7'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
+# Adding a new gem -- nokogiri -- to help grab info into form
+gem 'nokogiri'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
