--- a/buddybeats/Gemfile
+++ b/buddybeats/Gemfile
@@ -28,6 +28,10 @@ gem 'bcrypt', '~> 3.1.7'
 
 # gem 'rails-assets-sweetalert'
 
+source 'https://rails-assets.org' do
+  gem 'rails-assets-sweetalert'
+end
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
