--- a/buddybeats/Gemfile
+++ b/buddybeats/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+gem 'dotenv-rails', :groups => [:development, :test]
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
@@ -25,8 +26,6 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 
 # Use ActiveModel has_secure_password
 gem 'bcrypt', '~> 3.1.7'
-
-# gem 'rails-assets-sweetalert'
 
 source 'https://rails-assets.org' do
   gem 'rails-assets-sweetalert'
