--- a/buddybeats/Gemfile
+++ b/buddybeats/Gemfile
@@ -1,5 +1,7 @@
 source 'https://rubygems.org'
 
+gem 'execjs'
+
 gem 'dotenv-rails', :groups => [:development, :test]
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
