--- a/buddybeats/Gemfile
+++ b/buddybeats/Gemfile
@@ -2,7 +2,7 @@ source 'https://rubygems.org'
 
 gem 'execjs'
 
-gem 'dotenv-rails', :groups => [:development, :test]
+gem 'dotenv-rails'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.5'
